chore(vcs): exclude IDE-specific env files from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Xcode 
+Pong.xcodeproj/*.mode*
+Pong.xcodeproj/*.pbxuser
+Pong.xcodeproj/project.xcworkspace/xcuserdata/
+Pong.xcodeproj/xcuserdata/
